--- a/server/AquaRipple.Api/Dockerfile
+++ b/server/AquaRipple.Api/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY *.csproj ./
 RUN dotnet restore
 COPY . .
-CMD ["dotnet", "run", "--urls", "http://0.0.0.0:8080"]
+CMD ["dotnet", "watch", "run", "--urls", "http://0.0.0.0:8080"]
